--- a/hu_aix_72_sanbooting_aix.adoc
+++ b/hu_aix_72_sanbooting_aix.adoc
@@ -118,7 +118,7 @@ Use the `-v` option to enable verbose mode and display all the priorities. Use t
 +
 `# sanlun lun show`
 +
-The following example shows the typical output for the `sanlun lun show` command in an Microsoft Multipath I/O (MPIO) multipathing environment:
+The following example shows the typical output for the `sanlun lun show` command in a Microsoft Multipath I/O (MPIO) multipathing environment:
 +
 .Show example output
 [%collapsible]
