--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -13,7 +13,7 @@ summary: Provides guidance on ONTAP SAN host configuration settings for the Veri
 :imagesdir: ./media/
 
 [.lead]
-You can use ONTAP SAN host configuration settings for the Veritas Infoscale storage foundation 7 series release for Red Hat Enterprise Linux and Oracle Linux (Red Hat Enterprise Kernel based) platforms with FC, FCoE and iSCSI protocols.
+You can use ONTAP SAN host configuration settings for the Veritas Infoscale storage foundation 7 series release for Red Hat Enterprise Linux and Oracle Linux (Red Hat Compatible Kernel based) platforms with FC, FCoE and iSCSI protocols.
 
 == Install the Linux Host Utilities
 
