--- a/nvme_rhel_84.adoc
+++ b/nvme_rhel_84.adoc
@@ -37,7 +37,7 @@ You can use the following procedure to enable in-kernel NVMe multipath.
 
 .	Install RHEL 8.4 GA on the server. 
 
-.	After the installation is complete, verify that you are running the specified RHEL 8.4 kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the current list of supported versions.
+.	After the installation is complete, verify that you are running the specified RHEL 8.4 kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 Example:
 +
