--- a/_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc
+++ b/_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc
@@ -2,7 +2,7 @@ For the current list of supported adapters, see the link:https://mysupport.netap
 
 .Steps
 
-. Verify that you are using asupported adapter.
+. Verify that you are using the supported adapter.
 +
 ----
 # cat /sys/class/scsi_host/host*/modelname
