--- a/nvme_ol_82.adoc
+++ b/nvme_ol_82.adoc
@@ -17,7 +17,7 @@ You can configure NVMe over Fibre Channel (NVMe/FC) on initiator hosts running O
 
 == Supportability
 
-Beginning with ONTAP 9.6, NVMe/FC is supported for Oracle Linux 8.2. The Oracle Linux 8.2 host can run both NVMe/FC and FCP traffic through the same fibre channel (FC) initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. For the current list of supported configurations see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
+Beginning with ONTAP 9.6, NVMe/FC is supported for Oracle Linux 8.2. The Oracle Linux 8.2 host can run both NVMe/FC and FCP traffic through the same fibre channel (FC) initiator adapter ports. See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. For the current list of supported configurations see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
@@ -29,7 +29,7 @@ SAN booting using the NVMe-oF protocol is currently not supported.
 
 . Install Oracle Linux 8.2 on the server.
 
-. After the installation is complete, verify that you are running the supported Unbreakable Enterprise kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
+. After the installation is complete, verify that you are running the supported Unbreakable Enterprise kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 +
 ----
 # uname -r
@@ -62,7 +62,7 @@ If the +hostnqn+ strings do not match, you should use the vserver modify command
 
 == Configure the Broadcom FC Adapter for NVMe/FC
 
-. Verify that you are using the supported adapter. For the current list of supported adapters, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
+. Verify that you are using the supported adapter. For the current list of supported adapters, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 +
 ----
 # cat /sys/class/scsi_host/host*/modelname
