--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -29,7 +29,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 *	With Oracle Linux 8.5, a native `udev` rule is provided as part of the `nvme-cli` package which enables round-robin load balancing for NVMe multipath. Therefore, you do not need to manually create this rule anymore.
 
-*	With Oracle Linux 8.5, both NVMe and SCSI traffic can be run on the same host. This is most commonly deployed host configuration. You can configure dm-multipath as usual for SCSI LUNs resulting in mpath devices and also use NVMe multipath to configure NVMe-oF multipath devices (for example, `/dev/nvmeXnY`) on the host.
+*	With Oracle Linux 8.5, both NVMe and SCSI traffic can be run on the same host. This is the commonly deployed host configuration. You can configure dm-multipath as usual for SCSI LUNs resulting in mpath devices and also use NVMe multipath to configure NVMe-oF multipath devices (for example, `/dev/nvmeXnY`) on the host.
 
 *	With Oracle Linux 8.5, the NetApp plugin in the native `nvme-cli` package is capable of displaying ONTAP details as well as ONTAP namespaces.
 
@@ -39,13 +39,13 @@ SAN booting using the NVMe-oF protocol is currently not supported.
 
 == Configuration requirements
 
-Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for exact details regarding supported configurations. 
+Refer to the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for exact details regarding supported configurations. 
  
 == Enable NVMe/FC with Oracle Linux 8.5
 
 .Steps
 
-.	Install Oracle Linux 8.5 General Availability (GA) on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.5 GA kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the current list of supported versions.
+.	Install Oracle Linux 8.5 General Availability (GA) on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.5 GA kernel. See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 +
 ----
 # uname -r
