--- a/hu_fcp_scsi_index.adoc
+++ b/hu_fcp_scsi_index.adoc
@@ -13,9 +13,12 @@ summary:
 :imagesdir: ./media/
 
 [.lead]
-You can configure FCP and iSCSI protocols on certain SAN hosts for operation with ONTAP LUNs using the SAN Host Utilities software, if is available for your host. SAN Host Utilities help you manage and monitor your LUNs and host bus adapters (HBAs). NetApp customer support can also use the SAN Host Utilities to gather information about your configuration if you have an issue that requires assistance. 
+You can configure FCP and iSCSI protocols on certain SAN hosts for operation with ONTAP LUNs using the SAN Host Utilities software.
 
-You first install the relevant operating system host utility software package, which includes the SAN Toolkit. If it's supported by your SAN configuration, you can also configure your host to use SAN booting. You then verify the multipath settings for the ONTAP LUNs and apply the recommended settings. 
+There are several SAN Host Utilities software packages available on the NetApp Support site: AIX, HP-UX, Linux, Solaris, and Windows. The SAN Host Utilities help you manage and monitor your ONTAP LUNs and host bus adapters (HBAs). NetApp customer support can also use the SAN Host Utilities to gather information about your configuration if you have an issue that requires assistance.
+
+You first install the Host Utility software package for you operating system. If it's supported by your SAN configuration, you can also configure your host to use SAN booting. You then verify the multipath settings for the ONTAP LUNs and apply the recommended settings for ONTAP LUNs to optimize the performance of your host configuration.
 
 .Related information
+link:hu_sanhost_index.html[Learn about SAN Host Utilities]
 https://docs.netapp.com/us-en/ontap/san-admin/index.html[SAN provisioning^].
