--- a/hu_nvme_index.adoc
+++ b/hu_nvme_index.adoc
@@ -4,7 +4,7 @@ permalink: hu_nvme_index.html
 keywords: nvme, san, host, aix, linux, vsphere, windows
 summary: You can configure certain SAN hosts for the NVMe over Fabrics (NVMe-oF) protocol.
 ---
-= Learn about NVMe-oF host configurations for ONTAP storage
+= Overview
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,15 +13,4 @@ summary: You can configure certain SAN hosts for the NVMe over Fabrics (NVMe-oF)
 :imagesdir: ./media/
 
 [.lead]
-You can configure the NVMe over Fabrics (NVMe-oF) protocol on the SAN hosts included in this doc set to help manage and monitor ONTAP LUNs. The SAN host configurations support the NVMe over Fabrics (NVMe-oF) protocol with Asymmetric Namespace Access (ANA). 
-
-NVMe-oF supports the NVMe over Fibre Channel (NVMe/FC) and NVMe over TCP (NVMe/TCP) protocols. Depending on your host operating system, you configure NVMe/FC, NVMe/TCP, or both protocols on a SAN host. 
-
-Depending on your host operating system and ONTAP version, you can use the following ONTAP features to enhance the host performance:
-
-* Beginning with ONTAP 9.16.1, configure Transport Layer Security to provide end-to-end encryption for NVMe connections between and an NVMe-oF host and ONTAP array.
-* Beginning with ONTAP 9.12.1, set up secure in-band authentication over NVMe/TCP and NVMe/FC between a host and ONTAP controller.
-* Beginning with ONTAP 9.11.1, create a persistent discovery controller for a host.
-
-.Related information
-https://docs.netapp.com/us-en/ontap/san-admin/manage-nvme-concept.html[NVMe provisioning^]
+You can configure certain SAN hosts for the NVMe over Fabrics (NVMe-oF) protocol, which includes NVMe over Fibre Channel (NVMe/FC) and NVMe over TCP (NVMe/TCP), with ONTAP as the target. Depending on your host operating system and ONTAP version, you configure and validate the NVMe/FC or NVMe/TCP protocol, or both on the host.
