Editing the MPIO acronym

--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -42,7 +42,7 @@ include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
 include::_include/windows/reuse_windows_multipathing.adoc[]
 
-NOTE: When you select Microsoft Multipath I/O (MPIO) support, the Windows Host Utilities enables the included MPIO feature of Windows Server 2012 R2.
+NOTE: When you select MPIO support, the Windows Host Utilities enables the included MPIO feature of Windows Server 2012 R2.
 
 == SAN configuration
 
