--- a/hu_windows_2022.adoc
+++ b/hu_windows_2022.adoc
@@ -35,7 +35,7 @@ include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 == Multipathing
 include::_include/windows/reuse_windows_multipathing.adoc[]
 
-NOTE: When you select Microsoft Multipath I/O (MPIO) support, the Windows Host Utilities enables the included MPIO feature of Windows Server 2022.
+NOTE: When you select MPIO support, the Windows Host Utilities enables the included MPIO feature of Windows Server 2022.
 
 == SAN configuration
 === Non-ASA configuration
