--- a/hu_windows_2019.adoc
+++ b/hu_windows_2019.adoc
@@ -37,7 +37,7 @@ include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 == Multipathing
 include::_include/windows/reuse_windows_multipathing.adoc[]
 
-NOTE: When you select Microsoft Multipath I/O (MPIO) support, the Windows Host Utilities enables the included MPIO feature of Windows Server 2019.
+NOTE: When you select MPIO, the Windows Host Utilities enables the included MPIO feature of Windows Server 2019.
 
 == SAN configuration
 === Non-ASA configuration
