Edits post meeting with SME and setting up includes

--- a/_include/hu/reuse_hu_san_booting_steps.adoc
+++ b/_include/hu/reuse_hu_san_booting_steps.adoc
@@ -1,7 +1,7 @@
 If it is supported by your SAN configuration, you should configure your host to use SAN booting to simplify deployment and improve scalability.
 
 .Before you begin
-Use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=84067;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware, HBA boot BIOS, and the ONTAP versionssupport SAN booting.
+Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware, HBA boot BIOS, and the ONTAP versionssupport SAN booting.
 
 .Steps
 
