--- a/_include/hu/enable-san-boot-linux.adoc
+++ b/_include/hu/enable-san-boot-linux.adoc
@@ -1,17 +1,17 @@
 If it is supported by your SAN configuration, you should configure your host to use SAN booting to simplify deployment and improve scalability.
 
 .Before you begin
-Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware, HBA boot BIOS, and the ONTAP versions support SAN booting.
+Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
 
 .Steps
 
 . Map the SAN boot LUN to the host.
 +
-See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage].
+See https://docs.netapp.com/us-en/ontap/san-management/index.html[SAN storage management^].
 . Verify that multiple paths are available.
 +
 [NOTE] 
-Multiple paths become available after the host operating system is up and running on the paths.
+Multiple paths become available after the host OS is up and running on the paths.
 
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
