minor edits to recommended settings

--- a/_include/hu/configure-multipathing-and-optimize-performance-intro.adoc
+++ b/_include/hu/configure-multipathing-and-optimize-performance-intro.adoc
@@ -41,7 +41,7 @@ The following table shows the critical multipathd parameters for ONTAP LUNs and 
 | vendor | NETAPP
 |===
 
-CAUTION: Overriding the recommended setting for a parameter can have a negative impact on performance. Contact NetApp support or your OS vendor before overriding a recommended setting to ensure the impact is fully understood.
+CAUTION: Overriding the recommended setting for a parameter can have a negative impact on performance. Contact NetApp support or your OS vendor if you need to override a recommended setting to ensure the impact is fully understood.
 
 === Use multipathing to optimize performance
 
