Content improvements for Windows 2025

--- a/_include/windows/reuse_windows_installing_WUHU.adoc
+++ b/_include/windows/reuse_windows_installing_WUHU.adoc
@@ -1,1 +1,1 @@
-The Windows Host Utilities are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. NetApp recommends downloading and installing the latest utility kit. For WUHU configuration information and instructions, refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Host Utilities documentation] and select the installation procedure for your Windows Host Utilities version.
+The Windows Host Utilities are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. NetApp recommends downloading and installing the latest utility kit. For Windows Host Utilities configuration information and instructions, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Host Utilities documentation] and select the installation procedure for your Windows Host Utilities version.
