--- a/hu_windows_2025.adoc
+++ b/hu_windows_2025.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: hu_windows_2025.html
 keywords: windows, enterprise
-summary: Using Windows Server 2022 with ONTAP.
+summary: You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 for operation with ONTAP storage.
 ---
-= Use Windows Server 2025 with ONTAP
+= Configure Windows Server 2025 for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,13 +13,10 @@ summary: Using Windows Server 2022 with ONTAP.
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 with ONTAP as the target. 
+You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 for operation with ONTAP storage. 
 
-== Boot the operating system
+== Boot the Windows OS
 include::_include/windows/reuse_windows_booting_OS.adoc[]
-
-=== Use SAN booting
-include::_include/windows/reuse_windows_san_booting.adoc[]
 
 
 == Install the Windows Unified Host Utilities
@@ -28,7 +25,12 @@ include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 == Multipathing
 include::_include/windows/reuse_windows_multipathing.adoc[]
 
-NOTE: When you select MPIO support, the WUHU enables the MPIO feature included in Windows Server 2025.
+[NOTE]
+====
+When you select MPIO support, the Windows Host Utilities enables the MPIO feature included in Windows Server 2025.
+
+Windows XP or Windows Vista running in a Hyper-V virtual machine doesn't support MPIO.
+====
 
 == SAN configuration
 
