--- a/_include/windows/reuse_windows_recommended_settings.adoc
+++ b/_include/windows/reuse_windows_recommended_settings.adoc
@@ -16,7 +16,7 @@ The timeout values for Emulex FC HBAs:
 --
 .QLogic FC
 --
-The timeout values ror QLogic FC HBAs
+The timeout values for QLogic FC HBAs
 
 [cols=2*,options="header"]
 |===
