--- a/_include/windows/reuse_windows_hotfix_install.adoc
+++ b/_include/windows/reuse_windows_hotfix_install.adoc
@@ -1,11 +1,7 @@
 
-. Download hotfixes from the Microsoft support site.
-
-NOTE: Some hotfixes are not available for direct download. In these cases, you will need to request a given hotfix from Microsoft support personnel.
-
+NOTE: You need to contact Microsoft support for the hotfixes that aren't available for download from the Microsoft support site.
 
 [start=2]
 . Follow the instructions provided by Microsoft to install the hotfixes.
 
-
-TIP: Many hotfixes require a reboot of your Windows host, but you can opt to wait to reboot the host until _after_ you install or upgrade the Host Utilities.
+TIP: Many hotfixes require a reboot of your Windows host. You can opt to wait to reboot the host until _after_ you install or upgrade the Host Utilities.
