--- a/_include/windows/reuse_windows_recommended_settings.adoc
+++ b/_include/windows/reuse_windows_recommended_settings.adoc
@@ -28,4 +28,4 @@ The timeout values for QLogic FC HBAs
 --
 ====
 
-NOTE: For more information on the recommended settings, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Host Utilities documentation] and select the installation procedure for your Windows Host Utilities version.
+NOTE: For more information on the recommended settings, see link:link:hu_wuhu_hba_settings.html[Configure registry settings for Windows Host Utilities].
