--- a/hu_windows_2025.adoc
+++ b/hu_windows_2025.adoc
@@ -27,7 +27,7 @@ NetApp recommends installing the *latest cumulative update* on the server.
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
-== Install the Windows Unified Host Utilities
+== Install the Windows Host Utilities
 include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
 == Multipathing
