fix broken link

--- a/_include/windows/reuse_windows_recommended_settings.adoc
+++ b/_include/windows/reuse_windows_recommended_settings.adoc
@@ -28,4 +28,4 @@ The timeout values for QLogic FC HBAs:
 --
 ====
 
-NOTE: For more information on the recommended settings, see link:link:hu_wuhu_hba_settings.html[Configure registry settings for Windows Host Utilities].
+NOTE: For more information on the recommended settings, see link:hu_wuhu_hba_settings.html[Configure registry settings for Windows Host Utilities].
